<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_rectangle"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".activities.EditingPicActivity">

    <RelativeLayout
        android:id="@+id/filters_top_relative"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:visibility="visible">

        <ImageView
            android:id="@+id/back"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/editing_pressed_state_color"
            android:contentDescription="@string/back"
            android:src="@drawable/back_icon"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/apply"
            android:layout_width="30dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/editing_pressed_state_color"
            android:contentDescription="@string/apply"
            android:src="@drawable/save_icon" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5.5"
        android:background="@color/full_black">

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/full_black">

            <ImageView
                android:id="@+id/person_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/full_black"
                android:contentDescription="@string/person_image"
                app:layout_constraintTop_toTopOf="parent" />
        </RelativeLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:layout_weight="0.50"
        android:background="@color/transparent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/txt_filters"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/gradient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/gradient"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/blur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/blur"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/black_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/black_white"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/spiral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/spiral"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/wings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/wings"
            android:textColor="@color/white"
            android:textSize="14sp" />
        <!--<TextView
            android:id="@+id/drip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="Dp"
            android:textColor="@color/white"
            android:textSize="14sp" />-->
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/simpleFilterRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_image"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/simple_filter_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gradient_filter_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_image"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/simple_filter_item" />

    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:progress="255"
        android:visibility="gone" />

</LinearLayout>