<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_Color"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".activities.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statusRecycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:ignore="RtlSymmetry"
        tools:listitem="@layout/status_design_item" />

    <LinearLayout
        android:id="@+id/viewLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/horizontalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintBottom_toTopOf="@+id/adView"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <LinearLayout
                    android:id="@+id/wings_linear"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/drip_blue_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_drip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/rectangle"
                        android:text="@string/wings"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/drip_icon"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="@dimen/margin_2dp"
                        android:layout_marginTop="@dimen/margin_2dp"
                        android:contentDescription="@string/txt_square"
                        android:src="@drawable/wing_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/blur_linear"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/yellow_motion_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/square"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/rectangle"
                        android:text="@string/blur"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/square_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/txt_square"
                        android:src="@drawable/blur_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/filter_linear"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:background="@drawable/square_purple_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/collage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/rectangle"
                        android:text="@string/txt_filter"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/collage_icon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/txt_collage"
                        android:src="@drawable/filter_icon" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/spiral_linear"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/spiral_green_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_spiral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/rectangle"
                        android:text="@string/spiral"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/spiral_icon"
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="@dimen/margin_5dp"
                        android:contentDescription="@string/txt_collage"
                        android:src="@drawable/spiral_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/b_and_w_linear"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/red_college_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/glitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/rectangle"
                        android:text="@string/black_white"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/glitch_icon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="4dp"
                        android:contentDescription="@string/txt_collage"
                        android:src="@drawable/b_and_w" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gradient_linear"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/glitch_background"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/frames"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/rectangle"
                        android:text="@string/gradient"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                    <ImageView
                        android:id="@+id/frames_icon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="3dp"
                        android:contentDescription="@string/txt_collage"
                        android:src="@drawable/gradient" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/gallery_linear"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/gallery_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/galler_icon"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/txt_collage"
                        android:src="@drawable/gallery_icon" />

                    <TextView
                        android:id="@+id/gallery_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/rectangle"
                        android:text="@string/gallery"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/camera_linear"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/camera_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:id="@+id/camera_icon"
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:contentDescription="@string/txt_collage"
                        android:src="@drawable/camera_icon" />

                    <TextView
                        android:id="@+id/camera_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/rectangle"
                        android:text="@string/camera"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>